--- a/tests/vmnet/docker-compose.yml
+++ b/tests/vmnet/docker-compose.yml
@@ -8,9 +8,6 @@ networks:
         subnet: 172.29.0.0/16
 services:
   delegate_4:
-    build:
-      context: ${LOCAL_PATH}/cilantro
-      dockerfile: ${DOCKER_DIR}/cilantro_base.dev
     container_name: delegate_4
     environment:
     - HOSTNAME=delegate_4
@@ -20,7 +17,7 @@ services:
     - MASTERNODE=172.29.5.1
     - WITNESS=172.29.5.2,172.29.5.3
     - DELEGATE=172.29.5.4,172.29.5.5,172.29.5.6
-    - TEST_NAME=bootstrap
+    - TEST_NAME=pump_it
     image: cilantro_base.dev
     networks:
       cilantro:
@@ -32,9 +29,6 @@ services:
       target: /app/
       type: bind
   delegate_5:
-    build:
-      context: ${LOCAL_PATH}/cilantro
-      dockerfile: ${DOCKER_DIR}/cilantro_base.dev
     container_name: delegate_5
     environment:
     - HOSTNAME=delegate_5
@@ -44,7 +38,7 @@ services:
     - MASTERNODE=172.29.5.1
     - WITNESS=172.29.5.2,172.29.5.3
     - DELEGATE=172.29.5.4,172.29.5.5,172.29.5.6
-    - TEST_NAME=bootstrap
+    - TEST_NAME=pump_it
     image: cilantro_base.dev
     networks:
       cilantro:
@@ -56,9 +50,6 @@ services:
       target: /app/
       type: bind
   delegate_6:
-    build:
-      context: ${LOCAL_PATH}/cilantro
-      dockerfile: ${DOCKER_DIR}/cilantro_base.dev
     container_name: delegate_6
     environment:
     - HOSTNAME=delegate_6
@@ -68,7 +59,7 @@ services:
     - MASTERNODE=172.29.5.1
     - WITNESS=172.29.5.2,172.29.5.3
     - DELEGATE=172.29.5.4,172.29.5.5,172.29.5.6
-    - TEST_NAME=bootstrap
+    - TEST_NAME=pump_it
     image: cilantro_base.dev
     networks:
       cilantro:
@@ -80,9 +71,6 @@ services:
       target: /app/
       type: bind
   masternode:
-    build:
-      context: ${LOCAL_PATH}/cilantro
-      dockerfile: ${DOCKER_DIR}/cilantro_base.dev
     container_name: masternode
     environment:
     - HOSTNAME=masternode
@@ -91,7 +79,7 @@ services:
     - MASTERNODE=172.29.5.1
     - WITNESS=172.29.5.2,172.29.5.3
     - DELEGATE=172.29.5.4,172.29.5.5,172.29.5.6
-    - TEST_NAME=bootstrap
+    - TEST_NAME=pump_it
     image: cilantro_base.dev
     networks:
       cilantro:
@@ -103,9 +91,6 @@ services:
       target: /app/
       type: bind
   mgmt:
-    build:
-      context: ${LOCAL_PATH}/cilantro
-      dockerfile: ${DOCKER_DIR}/cilantro_base.dev
     container_name: mgmt
     environment:
     - HOSTNAME=mgmt
@@ -114,7 +99,7 @@ services:
     - MASTERNODE=172.29.5.1
     - WITNESS=172.29.5.2,172.29.5.3
     - DELEGATE=172.29.5.4,172.29.5.5,172.29.5.6
-    - TEST_NAME=bootstrap
+    - TEST_NAME=pump_it
     image: cilantro_base.dev
     networks:
       cilantro:
@@ -126,9 +111,6 @@ services:
       target: /app/
       type: bind
   witness_2:
-    build:
-      context: ${LOCAL_PATH}/cilantro
-      dockerfile: ${DOCKER_DIR}/cilantro_base.dev
     container_name: witness_2
     environment:
     - HOSTNAME=witness_2
@@ -138,7 +120,7 @@ services:
     - MASTERNODE=172.29.5.1
     - WITNESS=172.29.5.2,172.29.5.3
     - DELEGATE=172.29.5.4,172.29.5.5,172.29.5.6
-    - TEST_NAME=bootstrap
+    - TEST_NAME=pump_it
     image: cilantro_base.dev
     networks:
       cilantro:
@@ -150,9 +132,6 @@ services:
       target: /app/
       type: bind
   witness_3:
-    build:
-      context: ${LOCAL_PATH}/cilantro
-      dockerfile: ${DOCKER_DIR}/cilantro_base.dev
     container_name: witness_3
     environment:
     - HOSTNAME=witness_3
@@ -162,7 +141,7 @@ services:
     - MASTERNODE=172.29.5.1
     - WITNESS=172.29.5.2,172.29.5.3
     - DELEGATE=172.29.5.4,172.29.5.5,172.29.5.6
-    - TEST_NAME=bootstrap
+    - TEST_NAME=pump_it
     image: cilantro_base.dev
     networks:
       cilantro:
