modifying logging to clear the screen

--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,7 @@ cilantro/faucet.json
 # Data
 cilantro/protocol/networks/data
 certs
-
 tests/vmnet/docker-compose.yml
 .DS_Store
 certs
+state.tmp
