--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ aiohttp==2.3.9
 aioprocessing==1.0.0
 Cython==0.28.1
 idna==2.6
+mysqlclient==1.3.12
 mysql-connector-python-rf==2.2.2
 ntplib==0.3.3
 plyvel==1.0.4
@@ -17,6 +18,7 @@ rpcudp==3.0.0
 redis==2.10.6
 requests==2.18.4
 six==1.11.0
+seneca
 SQLAlchemy==1.2.6
 urllib3==1.22
 uvloop==0.9.1
