added cilantro to python path

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,7 @@ jobs:
             pipenv install
       - run:
           command: |
+            export PYTHONPATH=$PYTHONPATH:~/cilantro
             python ~/cilantro/tests/test_runner.py
       - store_test_results:
           path: test-results
