--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,7 @@ jobs:
           command: |
             sudo pip install pipenv
             pipenv install
+            pip install coloredlogs
       - run:
           command: |
             export PYTHONPATH=$PYTHONPATH:~/cilantro
