--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           command: |
             sudo pip install pipenv
             pipenv install
-            pip install coloredlogs
+            pip install -r requirements.txt
       - run:
           command: |
             export PYTHONPATH=$PYTHONPATH:~/cilantro
