added caching back in

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,14 +10,18 @@ jobs:
       - checkout
       - run: sudo chown -R circleci:circleci /usr/local/bin
       - run: sudo chown -R circleci:circleci /usr/local/lib/python3.6/site-packages
+      - restore_cache:
+          key: deps9-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
       - run:
           command: |
             sudo pip install pipenv
             pipenv install
             pip install -r requirements.txt
+            export PYTHONPATH=$PYTHONPATH:~/cilantro
+      - save_cache:
+          key: deps9-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
       - run:
           command: |
-            export PYTHONPATH=$PYTHONPATH:~/cilantro
             python ~/cilantro/tests/test_runner.py
       - store_test_results:
           path: test-results
