added cilantro path to cache

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
       - run: sudo chown -R circleci:circleci /usr/local/bin
       - run: sudo chown -R circleci:circleci /usr/local/lib/python3.6/site-packages
       - restore_cache:
-          key: deps9-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
+          key: cilantro-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
       - run:
           command: |
             sudo pip install pipenv
@@ -19,7 +19,7 @@ jobs:
             pip install -r requirements.txt
             export PYTHONPATH=$PYTHONPATH:~/cilantro
       - save_cache:
-          key: deps9-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
+          key: cilantro-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
       - run:
           command: |
             python ~/cilantro/tests/test_runner.py
