--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,7 @@ jobs:
             export PYTHONPATH=$PYTHONPATH:~/cilantro
       - run:
           command: |
+            export PYTHONPATH=$PYTHONPATH:~/cilantro
             python ~/cilantro/tests/test_runner.py
       - store_test_results:
           path: test-results
