moved test_runn inside a pipenv run wrapper

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,9 +23,8 @@ jobs:
             - "/usr/local/bin"
       - run:
           command: |
-            export PYTHONPATH=$PYTHONPATH:~/cilantro
-            pipenv shell
-            python ~/cilantro/tests/test_runner.py
+            pipenv run "export PYTHONPATH=$PYTHONPATH:~/cilantro"
+            pipenv run "python ~/cilantro/tests/test_runner.py"
       - store_test_results:
           path: test-results
       - store_artifacts:
