--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,13 +17,13 @@ jobs:
             sudo pip install pipenv
             pipenv install
       - save_cache:
-          key: deps9-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
+          key: cilantro-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
           paths:
             - ".venv"
             - "/usr/local/bin"
       - run:
           command: |
-            pipenv run "export PYTHONPATH=$PYTHONPATH:~/cilantro"
+            export PYTHONPATH=$PYTHONPATH:~/cilantro
             pipenv run "python ~/cilantro/tests/test_runner.py"
       - store_test_results:
           path: test-results
