export LOCAL_PATH in circle ci scripts

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,7 @@ jobs:
       - run:
           command: |
             export PYTHONPATH=$PYTHONPATH:~/cilantro
+            export LOCAL_PATH=~
             pipenv run python ~/cilantro/tests/test_runner.py
       - store_artifacts:
           path: test-results
