remove overlay test...added dev requirements to requirements for circle ci pipenv

--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,6 @@ pytest==3.5.0
 pytest-aiohttp==0.3.0
 pyzmq==17.0.0
 rpcudp==3.0.0
-redis==2.10.6
 requests==2.18.4
 seneca
 six==1.11.0
@@ -24,3 +23,8 @@ SQLAlchemy==1.2.6
 urllib3==1.22
 uvloop==0.9.1
 yarl==1.1.0
+
+coverage
+vmnet
+numpy
+scipy
