move docker compose install to inside docker image installation in circle ci yaml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,12 @@ jobs:
       - image: circleci/python:3.6.5
         environment:
           PIPENV_VENV_IN_PROJECT: true
-      - image: lamden/cilantro:firsttry
+      - run:
+          command: |
+            curl -L https://github.com/docker/compose/releases/download/1.19.0/docker-compose-`uname -s`-`uname -m` > ~/docker-compose
+            chmod +x ~/docker-compose
+            sudo mv ~/docker-compose /usr/local/bin/docker-compose
+#      - image: lamden/cilantro:firsttry
     steps:
       - checkout
       - run: sudo chown -R circleci:circleci /usr/local/bin
@@ -22,11 +27,7 @@ jobs:
           paths:
             - ".venv"
             - "/usr/local/bin"
-      - run:
-          command: |
-            curl -L https://github.com/docker/compose/releases/download/1.19.0/docker-compose-`uname -s`-`uname -m` > ~/docker-compose
-            chmod +x ~/docker-compose
-            sudo mv ~/docker-compose /usr/local/bin/docker-compose
+
       - run:
           command: |
             export PYTHONPATH=$PYTHONPATH:~/cilantro
