--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,10 +18,20 @@ jobs:
             sudo pip install pipenv
             pipenv install
 
+     # # This should go into custom primary image, here's only for the sake of explanation
+     # - run:
+     #     name: Install Docker client
+     #     command: |
+     #       set -x
+     #       VER="18.03.1-ce"
+     #       curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
+     #       tar -xz -C /tmp -f /tmp/docker-$VER.tgz
+     #       mv /tmp/docker/* /usr/bin
+     # This should go into custom primary image, here's only for the sake of explanation
      - run:
          name: Install Docker Compose
          command: |
-           curl -L https://github.com/docker/compose/releases/download/1.19.0/docker-compose-`uname -s`-`uname -m` > ~/docker-compose
+           curl -L https://github.com/docker/compose/releases/download/1.21.1/docker-compose-`uname -s`-`uname -m` > ~/docker-compose
            chmod +x ~/docker-compose
            sudo mv ~/docker-compose /usr/local/bin/docker-compose
 
@@ -38,7 +48,6 @@ jobs:
             export PYTHONPATH=$PYTHONPATH:~/cilantro
             export LOCAL_PATH=~
             pipenv run python ~/cilantro/tests/run_tests.py
-            
      - store_artifacts:
          path: test-results
          destination: tr1
