--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,37 +18,36 @@ jobs:
             sudo pip install pipenv
             pipenv install
 
-     # # This should go into custom primary image, here's only for the sake of explanation
-     # - run:
-     #     name: Install Docker client
-     #     command: |
-     #       set -x
-     #       VER="18.03.1-ce"
-     #       curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
-     #       tar -xz -C /tmp -f /tmp/docker-$VER.tgz
-     #       mv /tmp/docker/* /usr/bin
-     # This should go into custom primary image, here's only for the sake of explanation
-     - run:
-         name: Install Docker Compose
-         command: |
-           curl -L https://github.com/docker/compose/releases/download/1.21.1/docker-compose-`uname -s`-`uname -m` > ~/docker-compose
-           chmod +x ~/docker-compose
-           sudo mv ~/docker-compose /usr/local/bin/docker-compose
+      - run:
+          name: Install Docker client
+          command: |
+            set -x
+            VER="18.03.1-ce"
+            curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
+            tar -xz -C /tmp -f /tmp/docker-$VER.tgz
+            mv /tmp/docker/* /usr/bin
+     This should go into custom primary image, here's only for the sake of explanation
+      - run:
+          name: Install Docker Compose
+          command: |
+            curl -L https://github.com/docker/compose/releases/download/1.19.0/docker-compose-`uname -s`-`uname -m` > ~/docker-compose
+            chmod +x ~/docker-compose
+            sudo mv ~/docker-compose /usr/local/bin/docker-compose
 
-     - setup_remote_docker:
-         docker_layer_caching: true
+      - setup_remote_docker:
+          version: 18.03.1-ce
 
-     - save_cache:
-         key: cilantro-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
-         paths:
-         - ".venv"
-         - "/usr/local/bin"
+      - save_cache:
+          key: cilantro-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
+          paths:
+            - ".venv"
+            - "/usr/local/bin"
 
-     - run:
-         command: |
+      - run:
+          command: |
             export PYTHONPATH=$PYTHONPATH:~/cilantro
             export LOCAL_PATH=~
-            pipenv run python ~/cilantro/tests/run_tests.py
-     - store_artifacts:
-         path: test-results
-         destination: tr1
+            pipenv run python ~/cilantro/tests/run_tests.py --integration_tests 0
+      - store_artifacts:
+          path: test-results
+          destination: tr1
