--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,14 +20,14 @@ jobs:
             VER="17.09.0-ce"
             curl -L -o /tmp/docker-$VER.tgz https://download.docker.com/linux/static/stable/x86_64/docker-$VER.tgz
             tar -xz -C /tmp -f /tmp/docker-$VER.tgz
-            mv /tmp/docker/* /usr/bin
+            sudo mv /tmp/docker/* /usr/bin
 
       - run:
           name: Install Docker Compose
           command: |
             curl -L https://github.com/docker/compose/releases/download/1.21.1/docker-compose-`uname -s`-`uname -m` > ~/docker-compose
             chmod +x ~/docker-compose
-            sudo mv -f ~/docker-compose /usr/local/bin/docker-compose
+            sudo mv ~/docker-compose /usr/local/bin/docker-compose
 
       # - setup_remote_docker:
       #     version: 18.03.1-ce
