--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,8 +29,8 @@ jobs:
             chmod +x ~/docker-compose
             sudo mv ~/docker-compose /usr/local/bin/docker-compose
 
-      # - setup_remote_docker:
-      #     version: 18.03.1-ce
+      - setup_remote_docker:
+          version: 17.09.0-ce
 
       - run:
           name: Install Cilantro Requirements
