--- a/cilantro/config.json
+++ b/cilantro/config.json
@@ -52,7 +52,11 @@
             ],
     "majority": 2
   },
+
   "ports": {
+      "masternodes": [10000,11000],
+      "delegates": [11001,15000],
+      "witnesses": [15001,20000],
       "pub-sub": 9999,
       "router-dealer": 9998
   }
