WIP on getting integration tests working...

--- a/tests/vmnet/compose_files/cilantro-nodes.yml
+++ b/tests/vmnet/compose_files/cilantro-nodes.yml
@@ -23,6 +23,9 @@ services:
     tty: true
     expose:
       - '10000-20000'
+    ports:
+      - "10200"
+      - "8080"
     range:
       - 1
       - 6
