--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,10 +45,12 @@ jobs:
             - "/usr/local/bin"
 
       - run:
+          name: Run Tests
           command: |
             export PYTHONPATH=$PYTHONPATH:~/cilantro
             export LOCAL_PATH=~
             pipenv run python ~/cilantro/tests/run_tests.py --integration 0
+
       - store_artifacts:
           path: test-results
           destination: tr1
