--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 aenum==2.0.8
 aiodns==1.1.1
 aiohttp
-aioprocessing==1.0.0
+aioprocessing==1.0.1
 coloredlogs
-Cython==0.28.1
+Cython
 idna==2.6
 mysqlclient==1.3.12
 mysql-connector-python-rf==2.2.2
