--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,8 +21,12 @@ jobs:
       - run:
           name: Install Cilantro Requirements
           command: |
-            sudo pip install pipenv
-            pipenv install
+             pip install -r requirements.txt
+             pip install -r dev-requirements.txt
+             sudo apt install mysql-client
+#            sudo pip install pipenv
+#            pipenv install
+
 
 #      # This should go into custom primary image, here's only for the sake of explanation
 #      - run:
@@ -46,8 +50,9 @@ jobs:
       - save_cache:
           key: cilantro-{{ checksum "requirements.txt" }}
           paths:
-            - ".venv"
             - "/usr/local/bin"
+            - "/usr/local/lib/python3.6/site-packages"
+#            - ".venv"
 
       - run:
           name: Run Tests
