--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,12 +17,12 @@ jobs:
       - run: sudo chown -R circleci:circleci /usr/local/bin
       - run: sudo chown -R circleci:circleci /usr/local/lib/python3.6/site-packages
       - restore_cache:
-          key: cilantro-{{ checksum "requirements.txt" }}
+          key: cilantro-420-{{ checksum "requirements.txt" }}
       - run:
           name: Install Cilantro Requirements
           command: |
              pip install -r requirements.txt
-             sudo apt install mysql-client
+             sudo apt install -y mysql-client
 #             pip install -r dev-requirements.txt
 #            sudo pip install pipenv
 #            pipenv install
@@ -48,7 +48,7 @@ jobs:
 #      - setup_remote_docker
 
       - save_cache:
-          key: cilantro-{{ checksum "requirements.txt" }}
+          key: cilantro-420-{{ checksum "requirements.txt" }}
           paths:
             - "/usr/local/bin"
             - "/usr/local/lib/python3.6/site-packages"
