--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,7 +58,8 @@ jobs:
           command: |
             export PYTHONPATH=$PYTHONPATH:~/cilantro
             export LOCAL_PATH=~
-            pipenv run python ~/cilantro/tests/run_tests.py --integration 0 --skip_modules tests.contracts
+            run python3.6 ~/cilantro/tests/run_tests.py --integration 0 --skip_modules tests.contracts
+#            pipenv run python ~/cilantro/tests/run_tests.py --integration 0 --skip_modules tests.contracts
 
       - store_artifacts:
           path: test-results
