--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,7 +58,7 @@ jobs:
           command: |
             export PYTHONPATH=$PYTHONPATH:~/cilantro
             export LOCAL_PATH=~
-            mysql -h 127.0.0.1 -u root seneca_test
+            mysql -h 127.0.0.1 -u root
             python3.6 ~/cilantro/tests/run_tests.py --integration 0 --skip_modules tests.contracts
 #            pipenv run python ~/cilantro/tests/run_tests.py --integration 0 --skip_modules tests.contracts
 
