--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,27 +4,22 @@ jobs:
     working_directory: ~/cilantro
     docker:
       - image: circleci/python:3.6.5
-#        environment:
-#          PIPENV_VENV_IN_PROJECT: true
-#      - image: circleci/mysql:5.7
-#        environment:
-#          MYSQL_ALLOW_EMPTY_PASSWORD: yes
-#          MYSQL_ROOT_PASSWORD: ""
+      - image: circleci/mysql:5.7
+        environment:
+          MYSQL_ALLOW_EMPTY_PASSWORD: yes
+          MYSQL_ROOT_PASSWORD: ""
 
     steps:
       - checkout
       - run: sudo chown -R circleci:circleci /usr/local/bin
       - run: sudo chown -R circleci:circleci /usr/local/lib/python3.6/site-packages
       - restore_cache:
-          key: cilantro-1-{{ checksum "requirements.txt" }}
+          key: cilantro-2-{{ checksum "requirements.txt" }}
       - run:
           name: Install Cilantro Requirements
           command: |
              pip install -r requirements.txt
              sudo apt install -y mysql-client
-#             pip install -r dev-requirements.txt
-#            sudo pip install pipenv
-#            pipenv install
 
 
 #      # This should go into custom primary image, here's only for the sake of explanation
@@ -47,18 +42,18 @@ jobs:
 #      - setup_remote_docker
 
       - save_cache:
-          key: cilantro-1-{{ checksum "requirements.txt" }}
+          key: cilantro-2-{{ checksum "requirements.txt" }}
           paths:
             - "/usr/local/bin"
+            - "/usr/local/sbin"
             - "/usr/local/lib/python3.6/site-packages"
-#            - ".venv"
 
       - run:
           name: Run Tests
           command: |
             export PYTHONPATH=$PYTHONPATH:~/cilantro
             export LOCAL_PATH=~
-            sleep 30
+#            sleep 30
             python3.6 ~/cilantro/tests/run_tests.py --integration 0 --skip_modules tests.contracts
 #            pipenv run python ~/cilantro/tests/run_tests.py --integration 0 --skip_modules tests.contracts
 
