--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,8 +56,7 @@ jobs:
           command: |
             export PYTHONPATH=$PYTHONPATH:~/cilantro
             export LOCAL_PATH=~
-            python3.6 ~/cilantro/tests/run_tests.py
-#            pipenv run python ~/cilantro/tests/run_tests.py --integration 0 --skip_modules tests.contracts
+            python3.6 ~/cilantro/tests/run_tests.py --integration 0
 
       - store_artifacts:
           path: test-results
