--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,6 +52,13 @@ jobs:
             dockerize -wait tcp://localhost:3306 -timeout 1m
 
       - run:
+          name: Run flake8
+          command: |
+            pip install flake8
+            flake8 . --count --select=E901,E999,F821,F822,F823 --show-source --statistics
+            flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+
+      - run:
           name: Run Tests
           command: |
             export PYTHONPATH=$PYTHONPATH:~/cilantro
