--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,6 @@ pytest-aiohttp==0.3.0
 pyzmq==17.0.0
 rpcudp==3.0.0
 requests==2.18.4
-seneca
 six==1.11.0
 SQLAlchemy==1.2.6
 urllib3==1.22
@@ -25,3 +24,4 @@ yarl==1.1.0
 wheel
 
 -e git://github.com/Lamden/vmnet.git#egg=vmnet
+-e git://github.com/Lamden/seneca.git#egg=seneca
