--- a/requirements.txt
+++ b/requirements.txt
@@ -23,4 +23,5 @@ uvloop==0.9.1
 yarl==1.1.0
 wheel
 
+-e git://github.com/Lamden/vmnet.git#egg=vmnet
 -e git://github.com/Lamden/seneca.git#egg=seneca
